--- a/views/products.ejs
+++ b/views/products.ejs
@@ -14,84 +14,84 @@
       <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
+                <img src="images/fossil watch.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title" name="movie-name" value="SAAHO">SAAHO</h5>
-                  <p class="card-text" name="movie-price" value="7">price:7$</p>
-                  <button type="submit" class="btn btn-success" name="btn" value="SAAHO">Add to Cart</button>
+                  <h5 class="card-title" name="movie-name" value="FOSSIL WATCH">FOSSIL WATCH</h5>
+                  <p class="card-text" name="movie-price" value="7">PRICE:Rs.7400/-</p>
+                  <button type="submit" class="btn btn-success" name="btn" value="FOSSIL WATCH">Add to Cart</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/gold watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="GOLD WATCH">GOLD WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.3900/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="GOLD WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/rolex watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="ROLEX WATCH">ROLEX WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.5400/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="ROLEX WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/silver watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="SILVER WATCH">SILVER WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.8200/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="SILVER WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/fasttrack watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="FASTTRACK WATCH">FASTTRACK WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.400/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="FASTTRACK WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/titan watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="TITAN WATCH">TITAN WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.6000/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="TITAN WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/womens watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="WOMENS WATCH">WOMENS WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.3488/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="WOMENS WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-                <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">SAAHO</h5>
-                  <p class="card-text">price:7$</p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
-                </div>
+              <img src="images/diamond watch.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title" name="movie-name" value="DIAMOND WATCH">DIAMOND WATCH</h5>
+                <p class="card-text" name="movie-price" value="7">PRICE:Rs.7600/-</p>
+                <button type="submit" class="btn btn-success" name="btn" value="DIAMOND WATCH">Add to Cart</button>
+              </div>
             </div>
         </div>
       </div>
