--- a/views/cart-added.ejs
+++ b/views/cart-added.ejs
@@ -3,10 +3,9 @@
 <form action="/cart-added" method="post">
     <h1>Cart Added successfully</h1>
 
-    <button type="submit" name="btn" value="home-page">Go to home</button>
-    <button type="submit" name="btn" value="cart-page">View Cart Items</button>
+    <button class="btn btn-info" type="submit" name="btn" value="home-page">Go to home</button><br><br>
+    <button class="btn btn-info" type="submit" name="btn" value="cart-page">View Cart Items</button><br><br>
 </form>
-
 
 
 <%-include('footer')%>
