--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,21 +36,21 @@
                 
                 <center>
                     <div class="card" style="width: 18rem;">
-                        <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
+                        <img src="images/casualwatch.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">SAAHO</h5>
-                          <p class="card-text">PRICE:7</p>
-                          <button class="btn btn-success" type="submit" name="btn" value="SAAHO">Add to Cart</button>
+                          <h5 class="card-title">CASUAL MEN WATCH</h5>
+                          <p class="card-text">PRICE:Rs.5000/-</p>
+                          <button class="btn btn-success" type="submit" name="btn" value="CASUAL MEN WATCH">Add to Cart</button>
                         </div>
                     </div>
                     <br>
                     <br>
                     <div class="card" style="width: 18rem;">
-                        <img src="images/SAAHO.jpg" class="card-img-top" alt="...">
+                        <img src="images/smart watch.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">SAAHO</h5>
-                          <p class="card-text">PRICE:7</p>
-                          <button class="btn btn-success" type="submit" name="cart" value="SAAHO">Add to Cart</button>
+                          <h5 class="card-title">SMART WATCH</h5>
+                          <p class="card-text">PRICE:Rs.3400/-</p>
+                          <button class="btn btn-success" type="submit" name="cart" value="SMART WATCH">Add to Cart</button>
                         </div>
                     </div>
                     <br>
