--- a/views/smartwatches.ejs
+++ b/views/smartwatches.ejs
@@ -14,9 +14,9 @@
       <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card" style="width: 18rem;">
-                <img src="images/fossil watch.jpg" class="card-img-top" alt="...">
+                <img src="images/smart watch1.jpg" class="card-img-top" alt="..." height="350px" width="200px">
                 <div class="card-body">
-                  <h5 class="card-title" name="movie-name" value="FOSSIL WATCH">FOSSIL WATCH</h5>
+                  <h5 class="card-title" name="movie-name" value="SMART WATCH 1">SMART WATCH 1</h5>
                   <p class="card-text" name="movie-price" value="7">PRICE:Rs.7400/-</p>
                   <button type="submit" class="btn btn-success" name="btn" value="FOSSIL WATCH">Add to Cart</button>
                 </div>
@@ -24,9 +24,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/gold watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch2.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="GOLD WATCH">GOLD WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 2">SMART WATCH 2</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.3900/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="GOLD WATCH">Add to Cart</button>
               </div>
@@ -34,9 +34,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/rolex watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch3.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="ROLEX WATCH">ROLEX WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 3">SMART WATCH 3</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.5400/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="ROLEX WATCH">Add to Cart</button>
               </div>
@@ -44,9 +44,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/silver watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch4.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="SILVER WATCH">SILVER WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 4">SMART WATCH 4</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.8200/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="SILVER WATCH">Add to Cart</button>
               </div>
@@ -56,9 +56,9 @@
       <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card" style="width: 18rem;">
-              <img src="images/fasttrack watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch5.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="FASTTRACK WATCH">FASTTRACK WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 5">SMART WATCH 5</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.400/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="FASTTRACK WATCH">Add to Cart</button>
               </div>
@@ -66,9 +66,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/titan watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch6.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="TITAN WATCH">TITAN WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 6">SMART WATCH 6</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.6000/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="TITAN WATCH">Add to Cart</button>
               </div>
@@ -76,9 +76,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/womens watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch7.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="WOMENS WATCH">WOMENS WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 7">SMART WATCH 7</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.3488/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="WOMENS WATCH">Add to Cart</button>
               </div>
@@ -86,9 +86,9 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/diamond watch.jpg" class="card-img-top" alt="...">
+              <img src="images/smart watch8.jpg" class="card-img-top" alt="..." height="350px" width="200px">
               <div class="card-body">
-                <h5 class="card-title" name="movie-name" value="DIAMOND WATCH">DIAMOND WATCH</h5>
+                <h5 class="card-title" name="movie-name" value="SMART WATCH 8">SMART WATCH 8</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.7600/-</p>
                 <button type="submit" class="btn btn-success" name="btn" value="DIAMOND WATCH">Add to Cart</button>
               </div>
