--- a/views/form.ejs
+++ b/views/form.ejs
@@ -9,10 +9,10 @@
     <form action="/ordered" method="post">
         <label for="">name</label>
         <input type="text" name="name"><br><br>
-        <label for="">age</label>
-        <input type="text" name="age"><br><br>
-        <label for="">gender</label>
-        <input type="text" name="gender"><br><br>
+        <label for="">Phone Number</label>
+        <input type="text" name="phonenumber"><br><br>
+        <label for="">Address</label>
+        <input type="text" name="address"><br><br>
         <label for="">mail</label>
         <input type="text" name="mail"><br><br>
 
